# dcm

./: .gitignore  CMakeLists.txt  client.cpp  local_receiver.cpp  main.cpp  readme  receiver.cpp  sender.cpp  server.cpp  test.cpp
include/: connection.hpp  netlib.hpp
include/interprocess/: interproc.hpp
include/interprocess/streamsocket/: reader.hpp  receiver.hpp  receiver_session.hpp  sender.hpp
include/streamsocket/: endpoint.hpp  stream_socket_client.hpp  stream_socket_reader.hpp  stream_socket_server.hpp  stream_socket_server_session.hpp  stream_socket_writer.hpp
src/: IpcServer.cpp  IpcServer.h  NetMessage.cpp  NetMessage.h  NetRoom.cpp  NetRoom.h  NetSession.cpp  NetSession.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  buffer.hpp  dcm.hpp  imessage.hpp  local_receiver.hpp  messagereader.cpp  messagereader.hpp  object.hpp  remote_receiver.hpp  sender.hpp
src/capi/: dcm.cpp  dcm.h
src/core/: buffer.hpp  connection.hpp  imessage.hpp  listener.hpp  message.cpp  message.hpp  protocols.hpp  sender.hpp  util.hpp
src/ipc/: IpcServer.cpp  ipc_client.hpp  ipc_server.hpp  mq_client.hpp  mq_receiver.cpp  mq_receiver.hpp  mq_sender.cpp  mq_sender.hpp  mq_server.hpp  shm_client.cpp  shm_client.hpp  shm_receiver.cpp  shm_receiver.hpp  shm_sender.cpp  shm_sender.hpp  shm_server.cpp  shm_server.hpp
src/socket/: dcm_message_reader.hpp  dcm_message_writer.hpp  dcm_socket_client.hpp  dcm_socket_server.hpp  dcm_socket_session.hpp  endpoint.cpp  endpoint.hpp  stream_socket_client.hpp  stream_socket_message_reader.hpp  stream_socket_message_writer.hpp  stream_socket_server.hpp  stream_socket_server_session.hpp  tcp_client.hpp
